--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "colors": "^1.0.3",
     "commander": "^2.8.1",
     "express": "^4.12.3",
+    "hat": "0.0.3",
     "merge": "^1.2.0",
     "mongoose": "^4.0.2",
     "muttr": "git://github.com/muttr/libmuttr",
     "openpgp": "^1.0.1",
+    "request": "^2.55.0",
     "serve-favicon": "^2.2.0",
     "ws": "^0.7.1"
   }
