--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "openpgp": "^1.0.1",
     "request": "^2.55.0",
     "serve-favicon": "^2.2.0",
+    "through": "^2.3.8",
     "ws": "^0.7.1"
   }
 }
