--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^4.0.2",
     "muttr": "git://github.com/muttr/libmuttr",
     "openpgp": "^1.0.1",
+    "pem": "^1.7.2",
     "request": "^2.55.0",
     "serve-favicon": "^2.2.0",
     "through": "^2.3.8",
