--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "openpgp": "^1.0.1",
     "request": "^2.55.0",
     "serve-favicon": "^2.2.0",
+    "sha3": "^1.1.0",
     "through": "^2.3.8",
     "ws": "^0.7.1"
   }
